# fillit

./: CMakeLists.txt  Makefile  README.md  a.out  algos.c  author  fillit  fillit.h  help_function.c  invalid_test.sh  is_valid.c  main.c  print.c  tetras.c  valid_test.sh
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_mass.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+23 more)
tests/invalid/: testi_2.txt  testi_3.txt  testi_5.txt  testi_9.txt
tests/valid/: test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
