cmake_minimum_required(VERSION 3.14)
project(Fillit)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(libft)
include_directories(tests)
include_directories(tests/invalid)
include_directories(tests/valid)

add_executable(Fillit
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count_mass.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnlen.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        tests/invalid/testi_1.txt
        tests/invalid/testi_2.txt
        tests/invalid/testi_3.txt
        tests/invalid/testi_4.txt
        tests/invalid/testi_5.txt
        tests/invalid/testi_6.txt
        tests/invalid/testi_7.txt
        tests/invalid/testi_8.txt
        tests/invalid/testi_9.txt
        tests/valid/test_0.txt
        tests/valid/test_1.txt
        tests/valid/test_2.txt
        tests/valid/test_3.txt
        tests/valid/test_4.txt
        tests/valid/test_5.txt
        tests/valid/test_6.txt
        tests/valid/test_7.txt
        fillit.h
        main.c
        is_valid.c
        print.c
        )
